--- a/parasite-host-comparison.Rmd
+++ b/parasite-host-comparison.Rmd
@@ -1,7 +1,6 @@
 ---
 title: "_Plasmodium falciparum_ genetic diversity in coincident human and mosquito hosts"
 author: "Zena Lapp"
-date: "9/1/2021"
 output: 
   html_document:
     toc: true
@@ -227,7 +226,7 @@ ah_ama <- all_haps_summary %>% filter(sample_type != 'Human') %>%
   filter(marker == '*ama1*') %>% 
   pivot_wider(names_from = sample_type, values_from = haplotype_list) 
 
-ah_pairs <- bind_rows(ah_csp, ah_ama) %>% filter(!is.na(Abdomen) & !is.na(Head)) 
+ah_pairs <- bind_rows(ah_csp, ah_ama) %>% filter(!is.na(Abdomen) & !is.na(Head))
 
 ah_hap_cts <- sapply(1:nrow(ah_pairs), function(x){
   h <- strsplit(ah_pairs$Head, ',')[[x]]
@@ -245,7 +244,8 @@ ah_hap_cts <- sapply(1:nrow(ah_pairs), function(x){
          n_abd_only = n_abd - as.numeric(n_both),
          n_head_only = n_head - as.numeric(n_both),
          prop_abd_only = n_abd_only/as.numeric(n_union),
-         prop_head_only = n_head_only/as.numeric(n_union)) 
+         prop_head_only = n_head_only/as.numeric(n_union)) %>% 
+  left_join(mosq_dat, by = c(sample_name_dbs = 'sample_id_mosquito'))
 
 all_ah_hap_props <- sapply(ah_pairs$Abdomen, function(a){
   a <- strsplit(a, ',')[[1]]
@@ -270,6 +270,7 @@ mosq_pcr_summary %>%
   mutate(tot = sum(count), 
          percent = round(count/tot*100, 1))
 ```
+
 ### Figure 1: Mosquito abdomens and heads do not contain similar infections
 
 ```{r}
@@ -364,7 +365,7 @@ jaccard_plot <- ah_hap_cts %>%
        y = 'Number of mosquitoes', fill = 'Total\nnumber of\nhaplotypes') +
   theme(strip.text.y = element_markdown())
   
-jaccard_compare <- all_ah_hap_props %>%  
+jaccard_compare <- all_ah_hap_props %>% 
   mutate(pair = ifelse(pair == 'yes', 'Same\nmosquito', 'Different\nmosquito'),
          pair = factor(pair, levels = c('Same\nmosquito', 'Different\nmosquito'))) %>% 
   ggplot(aes(y = value, x = pair)) +
@@ -374,9 +375,18 @@ jaccard_compare <- all_ah_hap_props %>%
   labs(x = 'Abomen and head pair type', y = 'Jaccard distance') +
   theme(strip.text.x = element_markdown())
 
-fs2 <- plot_grid(mosq_hap_union, jaccard_plot, jaccard_compare, nrow = 1, rel_widths = c(1.2, 0.9, 0.8), labels = 'AUTO')
+compare_fed <- ah_hap_cts %>% 
+  mutate(bite_status = ifelse(abdominal_status %in% c('Blood Fed', 'Gravid'), 'Recent bite', 'No recent bite')) %>% 
+  ggplot(aes(x = bite_status, y = prop_both)) +
+  geom_boxplot() +
+  geom_jitter(alpha = 0.5) +
+  facet_grid(~marker) +
+  theme(strip.text = element_markdown()) +
+  labs(x = 'Bite status', y = 'Jaccard distance')
 
-ggsave(plot = fs2, filename = 'figures/FigS2.png', width = 15, height = 4)
+fs2 <- plot_grid(mosq_hap_union, jaccard_plot, jaccard_compare, compare_fed, labels = 'AUTO')
+
+ggsave(plot = fs2, filename = 'figures/FigS2.png', width = 11, height = 7)
 ```
 
 ```{r}
@@ -386,6 +396,12 @@ ks.test(all_ah_hap_props %>% reshape2::melt() %>% filter(marker == '*ama1*' & !g
 cat('KS test p for csp comparison\n')
 ks.test(all_ah_hap_props %>% reshape2::melt() %>% filter(marker == '*csp*' & !grepl('p', value)) %>% mutate(value = as.numeric(value)) %>% pull(value), 
         ah_hap_cts %>% filter(marker == '*csp*') %>% pull(prop_both))$p.value %>% suppressWarnings()
+
+cat('Wilcox p for comparison between recently fed and not recently fed mosquitoes\n') 
+ah_hap_cts %>% 
+mutate(bite_status = ifelse(abdominal_status %in% c('Blood Fed', 'Gravid'), 'Recent bite', 'No recent bite')) %>% 
+  group_by(marker) %>% 
+  summarize(p = wilcox.test(prop_both[bite_status == 'No recent bite'], prop_both[bite_status == 'Recent bite'])$p.value)
 ```
 
 ```{r}
@@ -398,6 +414,7 @@ ah_hap_cts %>%
             mean_prop_both = mean(prop_both),
             mean_prop_head = mean(n_head_only/n_union)) 
 ```
+
 ## Population-level diversity
 
 ```{r}
@@ -428,7 +445,6 @@ compartments_present <- pop_prev %>% select(sample_type, marker, haplotype, n_sa
   mutate(tot_distinct = sum(n_distinct),
             tot_occurrence = sum(n_occurrence))
 ```
-
 
 ```{r}
 hap_abundance_plot <- compartments_present %>% 
@@ -481,6 +497,7 @@ csp_rmst <- plot_rmst_tr(csp_seqs, '*csp*')
 
 ggsave(plot_grid(ama_rmst, csp_rmst, labels = 'AUTO'), filename = 'figures/FigS4.png', width = 15, height = 10)
 ```
+
 
 ### Figure 2 & S6: The mosquito _P. falciparum_ population is more diverse than the human P. falciparum population.
 
@@ -635,7 +652,6 @@ csp_inc_dat_haps <- all_haps_long %>% get_inc_dat(marker_hap = '*csp*', return_h
 get_div <- function(dat, datatype = 'incidence_freq', nboot = 100, estimate = TRUE){
   if(estimate){ estimate3D(dat, diversity = 'TD', q = seq(0, 2, by = 0.25), datatype, base = "coverage", level = NULL, nboot = nboot)}
   else{ asy3D(dat, diversity = 'TD', q = seq(0, 2, by = 0.25), datatype, nboot = 100) }
-  
 }
 
 ama_est3D <- get_div(ama_inc_dat)
@@ -671,6 +687,62 @@ csp_Cmax
 ```
 
 ```{r}
+get_inc_dat_village <- function(haps_long, marker_hap, return_haps = FALSE){
+  haps_long <- haps_long %>% filter(marker == marker_hap) %>% 
+    mutate(sample_type = ifelse(sample_type == 'Human', 'Human', 'Mosquito'))
+  tot_cts <- haps_long %>% 
+    group_by(sample_type, village_name) %>% 
+    summarize(count = n_distinct(sample_name_dbs)) %>% 
+    pivot_wider(names_from = c(sample_type, village_name), values_from = count, values_fill = 0)
+  hap_cts <- haps_long %>% 
+    group_by(sample_type, village_name, haplotype) %>% 
+    summarize(count = n()) %>% 
+    pivot_wider(names_from = c(sample_type, village_name), values_from = count, values_fill = 0)
+  all_cts <- bind_rows(tot_cts, hap_cts)
+  if(return_haps){ all_cts %>% pull(haplotype)
+  }else{ all_cts %>% select(-haplotype) %>% data.frame() }
+}
+
+# full dataset (in main text)
+ama_inc_dat_v <- all_haps_long %>% get_inc_dat_village(marker_hap = '*ama1*')
+csp_inc_dat_v <- all_haps_long %>% get_inc_dat_village(marker_hap = '*csp*') 
+
+ama_est3D_v <- get_div(ama_inc_dat_v)
+csp_est3D_v <- get_div(csp_inc_dat_v)
+```
+
+```{r}
+get_inc_dat_season <- function(haps_long, marker_hap, return_haps = FALSE){
+  haps_long <- haps_long %>% filter(marker == marker_hap) %>% 
+    mutate(sample_type = ifelse(sample_type == 'Human', 'Human', 'Mosquito')) %>% 
+    # mutate(season = lubridate::month(date))
+    mutate(season = case_when(lubridate::month(date) %in% 4:9 & lubridate::year(date) == 2017 ~ 'High 1',
+                            !(lubridate::month(date) %in% 4:9) ~ 'Low',
+                            lubridate::month(date) %in% 4:9 & lubridate::year(date) == 2018 ~ 'High 2'))
+  tot_cts <- haps_long %>% 
+    group_by(sample_type, season) %>% 
+    summarize(count = n_distinct(sample_name_dbs)) %>% 
+    pivot_wider(names_from = c(sample_type, season), values_from = count, values_fill = 0)
+  hap_cts <- haps_long %>% 
+    group_by(sample_type, season, haplotype) %>% 
+    summarize(count = n()) %>% 
+    pivot_wider(names_from = c(sample_type, season), values_from = count, values_fill = 0)
+  all_cts <- bind_rows(tot_cts, hap_cts)
+  if(return_haps){ all_cts %>% pull(haplotype)
+  }else{ all_cts %>% select(-haplotype) %>% data.frame() }
+}
+
+# full dataset (in main text)
+ama_inc_dat_s <- all_haps_long %>% get_inc_dat_season(marker_hap = '*ama1*')
+csp_inc_dat_s <- all_haps_long %>% get_inc_dat_season(marker_hap = '*csp*') 
+
+ama_est3D_s <- get_div(ama_inc_dat_s)
+csp_est3D_s <- get_div(csp_inc_dat_s)
+```
+
+
+
+```{r}
 diversity_plot <- bind_rows(ama_est3D %>% mutate(marker = '*ama1*'), csp_est3D %>% mutate(marker = '*csp*')) %>% 
   ggplot(aes(x = Order.q, y = qD, col = Assemblage, fill = Assemblage, shape = marker)) +
   geom_point(size = 3) +
@@ -683,6 +755,41 @@ diversity_plot <- bind_rows(ama_est3D %>% mutate(marker = '*ama1*'), csp_est3D %
   facet_grid(marker~'') +
   theme(axis.title.y = element_markdown(), strip.text.y = element_markdown()) +
   labs(x = 'Order (q)', y = 'Population-level haplotype diversity (^q D)', fill = 'Host', col = 'Host', shape = 'Marker')
+
+# evenness equation: (qD - 1)/(S - 1)
+evenness_plot <- bind_rows(ama_evenness$E3 %>% mutate(marker = '*ama1*'), csp_evenness$E3 %>% mutate(marker = '*csp*')) %>%
+  filter(Order.q %in% c(1, 2)) %>% 
+  ggplot(aes(x = as.character(Order.q), y = Evenness, ymin = Even.LCL, ymax = Even.UCL, 
+             col = Assemblage, fill = Assemblage, shape = marker)) +
+  geom_pointrange(position = position_dodge(width = 0.5), size = 0.75) +
+  scale_color_manual(values = host_colors) +
+  scale_shape_manual(values = c(17, 19), guide = 'none') +
+  facet_grid(marker~'') +
+  theme(axis.title.y = element_markdown(), strip.text.y = element_markdown()) +
+  labs(x = 'Order (q)', y = 'Population-level haplotype evenness (^q E)', fill = 'Host', col = 'Host', shape = 'Marker') 
+```
+
+```{r}
+raref_dat <- bind_rows(ama_iNEXT$iNextEst$size_based %>% mutate(marker = '*ama1*'), 
+          csp_iNEXT$iNextEst$size_based %>% mutate(marker = '*csp*')) %>% 
+  filter(Order.q %in% c(0, 0.5, 1, 1.5, 2)) %>% 
+  mutate(Order.q = paste0('q = ', Order.q))
+
+raref_plot <- raref_dat %>%
+  filter(Method != 'Observed') %>% 
+  mutate(Method = factor(Method, levels = c('Rarefaction', 'Extrapolation'))) %>% 
+  ggplot(aes(x = nt, y = qD, fill = Assemblage)) +
+  geom_line(aes(col = Assemblage, linetype = Method)) +
+  geom_ribbon(aes(ymin = qD.LCL, ymax = qD.UCL), alpha = 0.2) +
+  geom_point(data = raref_dat %>% filter(Method == 'Observed'), aes(col = Assemblage), size = 2) +
+  scale_fill_manual(values = host_colors) +
+  scale_color_manual(values = host_colors) +
+  scale_x_continuous(breaks = pretty_breaks()) +
+  scale_y_log10() +
+  facet_grid(marker~Order.q, scales = 'free') +
+  theme(axis.title.y = element_markdown(), axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1),
+        strip.text.y = element_markdown()) +
+  labs(x = 'Number of samples', y = 'Population-level<br>haplotype diversity (^q D)', col = 'Host', fill = 'Host')
 
 diversity_plot_supp <- bind_rows(
   bind_rows(ama_est3D_subsamp %>% mutate(marker = '*ama1*'), 
@@ -712,39 +819,37 @@ diversity_plot_supp <- bind_rows(
     theme(axis.title.y = element_markdown(), strip.text.x = element_markdown()) +
     labs(x = 'Order (q)', y = 'Population-level<br>haplotype diversity (^q D)', fill = 'Host', col = 'Host', shape = 'Sample set')
 
-raref_dat <- bind_rows(ama_iNEXT$iNextEst$size_based %>% mutate(marker = '*ama1*'), 
-          csp_iNEXT$iNextEst$size_based %>% mutate(marker = '*csp*')) %>% 
-  filter(Order.q %in% c(0, 0.5, 1, 1.5, 2)) %>% 
-  mutate(Order.q = paste0('q = ', Order.q))
-
-raref_plot <- raref_dat %>%
-  filter(Method != 'Observed') %>% 
-  mutate(Method = factor(Method, levels = c('Rarefaction', 'Extrapolation'))) %>% 
-  ggplot(aes(x = nt, y = qD, fill = Assemblage)) +
-  geom_line(aes(col = Assemblage, linetype = Method)) +
-  geom_ribbon(aes(ymin = qD.LCL, ymax = qD.UCL), alpha = 0.2) +
-  geom_point(data = raref_dat %>% filter(Method == 'Observed'), aes(col = Assemblage), size = 2) +
+diversity_village <- bind_rows(ama_est3D_v %>% mutate(marker = '*ama1*'), csp_est3D_v %>% mutate(marker = '*csp*')) %>% 
+  mutate(village = gsub('.*_','', Assemblage), Assemblage = gsub('_.*', '', Assemblage),
+         village = gsub('\\.', ' ', village)) %>% 
+  ggplot(aes(x = Order.q, y = qD, col = Assemblage, fill = Assemblage, shape = village)) +
+  geom_point(size = 3) +
+  geom_line() +
+  geom_ribbon(aes(ymin = qD.LCL, ymax = qD.UCL), alpha = 0.2, linetype = 0) +
   scale_fill_manual(values = host_colors) +
   scale_color_manual(values = host_colors) +
-  scale_x_continuous(breaks = pretty_breaks()) +
   scale_y_log10() +
-  facet_grid(marker~Order.q, scales = 'free') +
-  theme(axis.title.y = element_markdown(), axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1),
-        strip.text.y = element_markdown()) +
-  labs(x = 'Number of samples', y = 'Population-level<br>haplotype diversity (^q D)', col = 'Host', fill = 'Host')
+  facet_grid(~marker) +
+  theme(axis.title.y = element_markdown(), strip.text = element_markdown()) +
+  labs(x = 'Order (q)', y = 'Population-level<br>haplotype diversity (^q D)', 
+       fill = 'Host', col = 'Host', shape = 'Village')
 
-# evenness equation: (qD - 1)/(S - 1)
-evenness_plot <- bind_rows(ama_evenness$E3 %>% mutate(marker = '*ama1*'), csp_evenness$E3 %>% mutate(marker = '*csp*')) %>%
-  filter(Order.q %in% c(1, 2)) %>% 
-  ggplot(aes(x = as.character(Order.q), y = Evenness, ymin = Even.LCL, ymax = Even.UCL, 
-             col = Assemblage, fill = Assemblage, shape = marker)) +
-  geom_pointrange(position = position_dodge(width = 0.5), size = 0.75) +
+diversity_season <- bind_rows(ama_est3D_s %>% mutate(marker = '*ama1*'), csp_est3D_s %>% mutate(marker = '*csp*')) %>% 
+  mutate(season = gsub('.*_','', Assemblage), Assemblage = gsub('_.*', '', Assemblage),
+         season = gsub('\\.', ' ', season)) %>% 
+  ggplot(aes(x = Order.q, y = qD, col = Assemblage, fill = Assemblage, shape = season)) +
+  geom_point(size = 3) +
+  geom_line() +
+  geom_ribbon(aes(ymin = qD.LCL, ymax = qD.UCL), alpha = 0.2, linetype = 0) +
+  scale_fill_manual(values = host_colors) +
   scale_color_manual(values = host_colors) +
-  scale_shape_manual(values = c(17, 19), guide = 'none') +
-  facet_grid(marker~'') +
-  theme(axis.title.y = element_markdown(), strip.text.y = element_markdown()) +
-  labs(x = 'Order (q)', y = 'Population-level haplotype evenness (^q E)', fill = 'Host', col = 'Host', shape = 'Marker') 
+  scale_y_log10() +
+  facet_grid(~marker) +
+  theme(axis.title.y = element_markdown(), strip.text = element_markdown()) +
+  labs(x = 'Order (q)', y = 'Population-level<br>haplotype diversity (^q D)', 
+       fill = 'Host', col = 'Host', shape = 'Season')
 ```
+
 
 ```{r}
 fig_div <- plot_grid(pop_freq_plot, diversity_plot, evenness_plot + theme(legend.position = 'none'),
@@ -753,8 +858,10 @@ ggsave(plot = fig_div, filename = 'figures/Fig2.png', width = 15, height = 5)
 ```
 
 ```{r}
-fig_div_supp <- plot_grid(raref_plot, diversity_plot_supp, labels = c('A', 'B'), nrow = 2)
-ggsave(plot = fig_div_supp, filename = 'figures/FigS6.png', width = 12, height = 7)
+fig_div_supp <- plot_grid(plot_grid(raref_plot, diversity_plot_supp, labels = c('A', 'B'), nrow = 2),
+                          plot_grid(diversity_village, diversity_season, labels = c('C', 'D', nrow = 1)),
+                          nrow = 2, rel_heights = c(1, 0.5))
+ggsave(plot = fig_div_supp, filename = 'figures/FigS6.png', width = 12, height = 12)
 ```
 
 ## Haplotype evenness within samples
